- Applied FP 10.0.32.18 patch from Ari-Pekka Viitanen
- Fixed #652 Mistake in RTMPT Configuration lines in red5-core.xml
- Fixed #635 Bug SocketPolicyHandler.java with loading global flashpolicy.xml file
- Fixed #651 RTMPMinaTransport throws exception if isEnableMinaMonitor is true
- Fixed security policy for red5; Java Security Manager may now be used

Red5 0.8.0 (2009-06-04)
-----------------------
New Features:
- Use ExtendedPropertyPlaceholderConfigurer for Spring placeholderConfig bean
  (APPSERVER-333; Patch from Michael Guymon)
- Updated Mina to 2.0.0-M6
- Multiple socket binding on single RTMP transports
- Context duplication on each Catalina host

Bugfixes:
- Red5 War Version Does not Shutdown Gracefully (APPSERVER-325; patch from
  Gordon Hempton).
- Scope Memory Leak (APPSERVER-347; patch from Gordon Hempton)
- AMF3 uses Maps for references (CODECS-13; patch from Peter Rendl)
- src/org/red5/io/flv/meta/MetaService.java use Jetty log instead of slf4j
  (APPSERVER-318; patch from Damien Raude-Morvan)
- References are stored too late when deserializing AMF3 arrays (CODECS-12;
  patch from Peter Rendl).
- ConversionUtils fail to convert to primitive arrays (CODECS-14;
  patch from Peter Rendl).
- ConversionUtils fail to convert to sets (CODECS-15; patch from Peter Rendl).
- Encoded double arrays contain integer values (APPSERVER-362; patch from
  Christoph Botsch)
- Errors logged for empty class name (CODECS-17; patch from Peter Rendl)
- Destroy and disposible bean lifecycle events were not firing in the server
  upon shutdown and jvm exit (No jira)
- Created means for segregated Quartz schedulers per application. The bug was
  that the main scheduler has no idea where to location classes you try 
  to access in your scheduled job (No jira)
- Issue when reading empty persistent shared objects (APPSERVER-364)
- Removed Jacksum API, replaced with function available in commons-codec (APPSERVER-350)