@@ -25,6 +25,7 @@ Bugfixes:
 - Fixed #635 Bug SocketPolicyHandler.java with loading global flashpolicy.xml file
 - Fixed #651 RTMPMinaTransport throws exception if isEnableMinaMonitor is true
 - Fixed security policy for red5; Java Security Manager may now be used
+- Fixed #653 Missing license headers
 
 Red5 0.8.0 (2009-06-04)
 -----------------------
